[package]
name = "pyo3-test"
version = "0.1.0"
authors = ["messense <messense@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.16.2", features = ["extension-module"] }

[lib]
name = "pyo3_test"
crate-type = ["cdylib"]
