[package]
name = "pyo3-test"
version = "0.1.0"
authors = ["messense <messense@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
libz-sys = { version = "1.1.8", default-features = false, features = ["zlib-ng"] }

[lib]
name = "pyo3_test"
crate-type = ["cdylib"]
